event is more symmetric now

--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -22,24 +22,22 @@
             section.events-items
                 .event
                     .section.row.event-header
-                        section.row.col-xs-6
+                        section.row.col-xs-6.event-name
                             h2  Event1  
                             i.fa.fa-folder-open-o.fa-2x
-                        .col-xs-4.col-xs-offset-2
-                            .box
-                                i.fa.fa-comment.fa-2x
-                                i.fa.fa-rss.fa-2x
+                        .col-xs-2.col-xs-offset-4
+                            i.fa.fa-comment.fa-2x
+                            i.fa.fa-rss.fa-2x
                     .event-body
                         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque         penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa       scelerisque. Fusce interdum pharetra nulla
                 hr
                 .event
                     .section.row.event-header
-                        section.row.col-xs-6
-                            h2  Event2
+                        section.row.col-xs-6.event-name
+                            h2  Event1  
                             i.fa.fa-folder-open-o.fa-2x
-                        .col-xs-4.col-xs-offset-2
-                            .box
-                                i.fa.fa-comment.fa-2x
-                                i.fa.fa-rss.fa-2x
+                        .col-xs-2.col-xs-offset-4
+                            i.fa.fa-comment.fa-2x
+                            i.fa.fa-rss.fa-2x
                     .event-body
                         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque         penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa       scelerisque. Fusce interdum pharetra nulla
