--- a/frontend/components/events/eventsStyles.styl
+++ b/frontend/components/events/eventsStyles.styl
@@ -36,7 +36,16 @@
             
             .event
                 margin 0px
+                .event-name
+                    h2
+                        margin-left 15px
                 .fa
                     padding-top 18px
+                    padding-left 10px
+                .event-body
+                    padding-left 15px
+                    padding-right 15px
+                    p 
+                        margin-top 0px
                
           
