--- a/frontend/components/editMessage/editMessage.pug
+++ b/frontend/components/editMessage/editMessage.pug
@@ -1,7 +1,7 @@
 section.post-message-wrapper
   header
     h2 Edit message
-    button.fa.fa-close(ng-link='["MsgBoard"]')
+    div.fa.fa-close(ng-link='["MsgBoard"]')
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
   section.input-block
@@ -20,4 +20,4 @@ section.post-message-wrapper
   //    option(value='draft1') draft1
   //    option(value='draft2') draft2
   //    option(value='draft3') draft3
-  button Post
+  div.postBtn Edit
