--- a/frontend/components/files/files.pug
+++ b/frontend/components/files/files.pug
@@ -1,7 +1,7 @@
 section.files-wrapper
   header
     h2 Files
-    button.fa.fa-close(ng-link='["MsgBoard"]')
+    div.fa.fa-close(ng-link='["MsgBoard"]')
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
   section.content
@@ -18,4 +18,4 @@ section.files-wrapper
         img(align='top', src='https://cdn0.iconfinder.com/data/icons/cosmo-documents/40/txt-128.png', alt='')
         span TZ.doc
         hr
-  button Download all
+  div Download all
