--- a/frontend/components/files/files.styl
+++ b/frontend/components/files/files.styl
@@ -18,7 +18,7 @@
             height 1px
             background-color #EF6C00
             margin-left 0
-        button
+        div
             button()
             margin-left 70%
             margin-top 3%
@@ -41,15 +41,10 @@
                     margin-left 0
                     height 1px
                     background-color #616161
-    button
+    div
         button()
         width 40%
         padding-top 1%
         padding-bottom 1%
         margin-left 30%
         margin-bottom 40px
-        //margin-left 30%
-        //width 40%
-        //font-size 1.6em
-        //margin-bottom 20px
-        //background-color #91bd4c
