--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -23,7 +23,7 @@ section.messageBoard
             height 1px
             background-color #616161
             margin-bottom 2%
-        button
+        div
             button()
             margin-left 37.5%
             font-family "Montserrat"
@@ -51,7 +51,7 @@ section.messageBoard
                     padding-left 45%
                     width 40%
                     display flex
-                    button
+                    div
                         button()
                         margin-right 5%
             hr
