--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -17,7 +17,7 @@
             padding 1%
             font-size 1.4em
             font-family "Montserrat"
-        button
+        div
             button()
             margin-top 3%
             width 10%
@@ -51,7 +51,7 @@
             width 25%
             margin-left 10%
             margin-right 14%
-    button
+    .postBtn
         button()
         width 20%
         padding-top 1%
