--- a/frontend/components/editMessage/editMessage.styl
+++ b/frontend/components/editMessage/editMessage.styl
@@ -16,7 +16,7 @@
       padding 1%
       font-size 1.4em
       font-family "Montserrat"
-    button
+    div
       button()
       margin-left 60%
       margin-top 3%
@@ -51,7 +51,7 @@
       width 25%
       margin-left 10%
       margin-right 14%
-  button
+  .postBtn
     button()
     width 20%
     padding-top 1%
