--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -17,13 +17,13 @@ body {
   margin-top: 100px;
   margin-left: -185px;
   padding: 5px;
-  background: #e87d0b;
+  background: #1d8dbf;
   color: #fff;
   border-radius: 0.5rem;
   font-size: 20px;
 }
 .title button:hover {
-  background: #f69a37;
+  background: #1d6dbf;
 }
 h1 span {
   font-size: 50px;
@@ -35,7 +35,7 @@ h1 span {
   -moz-box-shadow: 0px 75px 35px -55px rgba(10,30,65,0.6);
   box-shadow: 0px 75px 35px -55px rgba(10,30,65,0.6);
   font-family: Arial, Helvetica, sans-serif;
-  border-color: #ef9d1d;
+  border-color: #adadad;
   border-style: solid;
   border-width: 1px;
   border-radius: 10px;
@@ -51,7 +51,7 @@ h1 span {
   float: left;
 }
 .accordion > ul > li {
-  background-color: #c26c0c;
+  background-color: #adadad;
   margin-right: -650px;
   margin-bottom: 0px;
 }
@@ -61,7 +61,7 @@ h1 span {
 }
 .accordion-title,
 .accordion-select {
-  background-color: #e87d0b;
+  background-color: #4d4d4d;
   color: #fff;
   width: 55px;
   height: 450px;
@@ -73,7 +73,7 @@ h1 span {
 }
 .accordion-select:hover ~ .accordion-title,
 .accordion-select:checked ~ .accordion-title {
-  background-color: #f69a37;
+  background-color: #808080;
 }
 .accordion-title span {
   transform: rotate(-90deg);
@@ -186,10 +186,10 @@ generated automatically and are common for each slider. */
   transition: 0.4s;
 }
 input:checked + .slider {
-  background-color: #e87d0b;
+  background-color: #1d8dbf;
 }
 input:focus + .slider {
-  box-shadow: 0 0 1px #f69a37;
+  box-shadow: 0 0 1px #1d6dbf;
 }
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
