--- a/frontend/components/events/eventEdit.component.styl
+++ b/frontend/components/events/eventEdit.component.styl
@@ -1,36 +1,46 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .eventsEdit-wrapper
-  display flex
-  flex-direction column
-  border 2px solid black
-  position absolute
-  top 50%
-  left 50%
-  padding 15px
-  -ms-transform translateX(-50%) translateY(-50%)
-  -webkit-transform translate(-50%,-50%)
-  transform translate(-50%,-50%)
+  width 100%
+  .main
+    padding 1%
+    border 1px solid border-grey
+    border-radius 10px
+    background-color background-white
+    box-shadow 0px 5px 20px 2px  #808080
+    font-family "Open Sans"
+    font-weight 400
+    font-size 23px
+    text-align justify
+    .head
+      font-family "Montserrat"
+      display flex
+      flex-direction row
+      justify-content space-between
+    .date
+      display flex
+      flex-direction row
+      justify-content space-between
+      margin-bottom 5px
+    textarea
+      min-width 100%
+      height 150px
+    .participants
+      display flex
+      flex-direction row
+      margin-bottom 5px
 
-.date
-  display flex
-  flex-direction row
-  justify-content space-between
-  margin-bottom 5px
+    .period
+      display flex
+      flex-direction row
+      justify-content space-between
+      button
+        font-family "Montserrat"
+        button()
+    i
+      color black
 
-.participants
-  display flex
-  flex-direction row
-  margin-bottom 5px
-
-.period
-  display flex
-  flex-direction row
-  justify-content space-between
-
-i
-  color black
-
-a
-  i
-    &:hover
-      color blue
+    a
+      i
+        &:hover
+          color blue
 
