Set-up event button

--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -4,7 +4,7 @@
             section.row.events-header.center-xs
                 span.col-xs-11 Events
             section.row
-                section.button.comment-button.col-xs-4.col-xs-offset-4 Set up event
+                section.button.comment-button.col-xs-4.col-xs-offset-4(ng-link='["CreateEvent"]') Set up event
             .choose-event-container
                 section.row.choose-event.center-xs
                     row.middle-xs
