--- a/frontend/components/main/mainStyles.styl
+++ b/frontend/components/main/mainStyles.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,200')
 @keyframes slide1
 	0%
@@ -22,7 +23,7 @@
 	.timeline_block
 		width 80%
 		margin 0 auto
-		background-color #C8E6C9
+		main-component()
 		padding 20px
 		display flex
 		align-items flex-end
@@ -44,7 +45,7 @@
 					background-color #EF6C00
 					i
 						font-size 36px
-						margin 12.5px 0
+						margin 12.5px 12px
 				span
 					color white
 					background-color #616161
@@ -66,6 +67,8 @@
 			.scale
 				display flex
 				height 300px
+				min-width 560px
+				margin-right 25px
 				align-items flex-end
 				margin-bottom 15px
 				.time_mark
@@ -123,8 +126,9 @@
 
 				
 		.preview_block
-			width 25%
-			height 300px
+			box-shadow 0px 0px 10px 0px grey
+			width 100%
+			height 400px
 			background-color white
 			display inline-block
 			position relative
