--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -9,6 +9,9 @@
       margin-left 5px
       margin-bottom 5px
   padding 1%
+  button
+    font-family "Montserrat"
+    button()
   h1
     align-self center
     font-family "Montserrat"
