--- a/frontend/templates/spinner.pug
+++ b/frontend/templates/spinner.pug
@@ -11,10 +11,17 @@ html
       .sk-cube.sk-cube8
       .sk-cube.sk-cube9
       style.
+        root-element{
+        display: block;
+        }
         .sk-cube-grid {
         width: 40px;
         height: 40px;
         margin: 100px auto;
+        position: fixed;
+        z-index: 999999999;
+        top: 50%;
+        left: 50%;
         }
         .sk-cube-grid .sk-cube {
         width: 33%;
