autoselect update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -3,6 +3,20 @@
   width 100%
   h1
     text-align center
+  .changeProj
+    display flex
+    justify-content center
+    margin-bottom 50px
+    height 35px
+    select
+      height 140%
+      width 50%
+      border-radius 5px
+      outline none
+      font-family "Montserrat"
+      font-size 18px
+      font-weight 400
+    
   .goto
     text-align center
     a 
