--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -2,10 +2,11 @@
   section.row.center-xs
     .main.col-xs-8
       h1 Project Settings
-      button(ng-click="proj.getProjects()",ng-if="proj.flag") Change project
-      select(ng-if="!proj.flag")
-        option(ng-repeat="project in proj.projects track by $index")
-          p {{project.title}}
+      .changeProj
+        button(ng-click="proj.getProjects()",ng-if="proj.flag") Change project
+        select(ng-if="!proj.flag")
+          option(ng-repeat="project in proj.projects track by $index",ng-selected="{{project._id == proj.user.curentProject}}")
+            p {{project.title}}
       .goto
         a(href='') Trash
         a(href='') Reports
