--- a/frontend/components/test/test.styl
+++ b/frontend/components/test/test.styl
@@ -1,26 +1,143 @@
-.test
-    .title
-        list-style none
-        margin 0
+section.messageBoard
+    text-align center
+    background-color #F5F5F5
+    width 80%
+    margin-left 10%
+    margin-bottom 2%
+    //margin-top 8%
+    box-shadow 0 5px 20px 2px #808080
+    border 1px solid #ADADAD
+    border-radius 10px
+    header
+        text-align center
+        font-size 1.6em
+        margin-bottom 50px
+        h2
+            color #212121
+            font-size 1.8em
+            font-family "Montserrat"
+        hr
+            margin-top -4%
+            width 40%
+            height 1px
+            background-color #616161
+            margin-bottom 2%
+        div
+            -moz-user-select -moz-none
+            -o-user-select none
+            -khtml-user-select none
+            -webkit-user-select none
+            user-select none
+            box-shadow 0 0 10px 0 GREY
+            display flex
+            justify-content center
+            align-items center
+            margin-top 1%
+            border-radius 5px
+            background-color #1D8DBF
+            color WHITE
+            padding 1% 3% 1% 3%
+            font-size 30px
+            height 50px
+            transition 0.2s
+            cursor pointer
+            &:active
+                box-shadow 0 0 0 0.5px WHITE, 0 0 0 2px main-blue, 0 0 5px 0 WHITE inset
+            &:hover
+                box-shadow 0 0 0 1px white, 0 0 0 4px #1D8DBF
+            margin-left 34.5%
+            font-family "Montserrat"
+            width 25%
+    .message-block
+        margin 0 5% 5% 5%
+        padding-left 1%
+        padding-right 1%
+        width 90%
         display flex
-        justify-content center
-        //flex-direction column
-        li
-            button
-                //position: absolute
-                //cursor: pointer
-                //text-decoration: none
-                //display: block
-                //margin-top: 100px
-                //margin-left: -185px
-                //padding: 5px
-                background #e87d0b
-                font-size 1.0em
-                //color: #fff
-                //border-radius: 0.5rem
-                //font-size: 20px
-            button:hover
-                background #f69a37
-            h1
-              font-size 1.8em
-              border-bottom 1px solid #000
+        align-items stretch
+        .user-info
+            border 1px solid #260595
+            border-top-left-radius 20px
+            border-bottom-left-radius 20px
+            background-color #1D8DBF
+            color #212121
+            width 20%
+            display flex
+            justify-content center
+            align-items center
+            flex-direction column
+            header
+                -moz-user-select -moz-none
+                -o-user-select none
+                -khtml-user-select none
+                -webkit-user-select none
+                user-select none
+                padding 10% 2% 10% 2%
+                display flex
+                justify-content center
+                align-items center
+                flex-direction column
+                .img
+                    width 64px
+                h3
+                    font-size 1em
+                    margin-top 0
+                    margin-bottom 0
+                    text-align center
+        .message-info
+            border-top 1px solid #ADADAD
+            border-bottom 1px solid #ADADAD
+            background-color #F5F5F5
+            width 65%
+            padding 3% 5% 3% 5%
+            font-size 1.2em
+            text-align justify
+            color #212121
+            font-family "Open Sans"
+            h3
+                text-align center
+                font-size 1.8em
+                margin-top 0
+                margin-bottom 4%
+                font-family "Montserrat"
+            p
+                color #F2992E
+                text-align right
+                font-weight bold
+                margin-bottom 0
+        .use-button
+            border-top-right-radius 20px
+            border-bottom-right-radius 20px
+            border 1px solid #ADADAD
+            background-color #F5F5F5
+            width 15%
+            display flex
+            flex-direction column
+            justify-content center
+            align-items stretch
+            padding-left 2%
+            padding-right 2%
+            div
+                -moz-user-select -moz-none
+                -o-user-select none
+                -khtml-user-select none
+                -webkit-user-select none
+                user-select none
+                box-shadow 0 0 10px 0 GREY
+                display flex
+                justify-content center
+                align-items center
+                margin-top 10%
+                margin-bottom 10%
+                border-radius 5px
+                background-color #1D8DBF
+                color WHITE
+                padding 1% 3% 1% 3%
+                font-size 30px
+                height 50px
+                transition 0.2s
+                cursor pointer
+                &:active
+                    box-shadow 0 0 0 0.5px WHITE, 0 0 0 2px main-blue, 0 0 5px 0 WHITE inset
+                &:hover
+                    box-shadow 0 0 0 1px white, 0 0 0 4px #1D8DBF
