--- a/frontend/components/test/test.pug
+++ b/frontend/components/test/test.pug
@@ -1,50 +1,1 @@
-section.messageBoard
-  header
-    h2 Message Board
-    hr
-    div(ng-link='["PostMessage"]') Post message
-  section.message-block
-      section.user-info
-          header
-              img.img(src="./img/person.gif")
-              h3 User Name
-      article.message-info
-          h3 Title
-          |  On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
-          |             you calling own excited painted. Contented attending smallness it oh ye unwilling.
-          p
-            | 13:34 14.08.2016
-      section.use-button
-          div.fa.fa-files-o
-          div.fa.fa-comments-o
-          div.fa.fa-share-alt
-  section.message-block
-        section.user-info
-            header
-                img.img(src="./img/person.gif")
-                h3 User Name
-        article.message-info
-            h3 Title
-            |  On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
-            |  you calling own excited painted. Contented attending smallness it oh ye unwilling.
-            p
-              | 13:34 14.08.2016
-        section.use-button
-            div.fa.fa-files-o
-            div.fa.fa-comments-o
-            div.fa.fa-share-alt
-  section.message-block
-        section.user-info
-            header
-                img.img(src="./img/person.gif")
-                h3 User Name
-        article.message-info
-            h3 Title
-            |  On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
-            |you calling own excited painted. Contented attending smallness it oh ye unwilling.
-            p
-              | 13:34 14.08.2016
-        section.use-button
-            div.fa.fa-files-o
-            div.fa.fa-comments-o
-            div.fa.fa-share-alt
+h2.test QQQ
