--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -4,9 +4,8 @@
       h1 Project Settings
       .changeProj
         button(ng-click="proj.getProjects()",ng-if="proj.flag") Change project
-        select(ng-if="!proj.flag",ng-model="proj.currentProjectTitle",ng-change="proj.setProject()")
-          option(ng-repeat="project in proj.userProjects track by $index")
-            p {{project.title}}
+        select(ng-if="!proj.flag",ng-model="proj.currentProject",ng-change="proj.setProject()")
+          option(ng-repeat="project in proj.userProjects track by $index" value='{{project._id}}') {{project.title}}
       .goto
         a(href='') Trash
         a(href='') Reports
