Hot fix with css

--- a/frontend/components/trash/trashStyles.styl
+++ b/frontend/components/trash/trashStyles.styl
@@ -1,96 +1,72 @@
-.trash-container{
-}
-.trash-container h1{
-	text-align: center;
-	font-family: "Montserrat";
-    font-weight: bold;
-	font-size: 30px;
-}
-.trash-container .trash-menu{
-	margin: 15px auto;
-}
-.trash-container .trash-menu li{
-	display: inline-block;
-	padding: 5px 10px 5px 10px;
-	border-left: 1px solid black;
-	height: 15px;
-	font-family: "Montserrat";
-    font-size: 20px;
-}
-.trash-container .trash-menu li:nth-child(2){
-	border: none;
-}
-.trash-container .trash-menu li:first-child{
-	border: none;
-}
-.trash-container .trash-menu li a{
-	color: #2f6fad;
-}
-.trash-container .trash-menu li a:hover{
-	text-decoration: none;
-	color: #ad303f;
-}
-.trash-container .trash-menu-container{
-	display: flex;
-}
-.trash-container .trash-items{
-	overflow: hidden;
-	margin: 50px auto;
-	width: 60%;
-	padding: 1%;
-    border: 1px solid #adadad;
-    border-radius: 10px;
-    background-color: #f5f5f5;
-    box-shadow: 0px 5px 20px 2px #808080;
-}
-.trash-container .trash-input{
-	width: 70px;
-	position: relative;
-    top: -4px;
-	height: 20px;
-	border-radius 7px;
-}
-.trash-container .trash-input:focus{
-	outline: none;
-}
-.trash-container .trash-line{
-	color: black;
-	width: 35%;
-	margin: 0 auto 0 auto;
-}
-.trash-data div{
-	display: inline-block;
-	float: left;
-	font-size: 20px;
-.trash-container .trash-data{
-	display: flex;
-	flex-flow: row wrap;
-	min-width: 600px;
-}
+.trash-container
+  display flex
+  flex-flow row wrap
+  min-width 600px
+  h1
+    text-align center
+    font-family "Montserrat"
+    font-weight bold
+    font-size 30px
+  .trash-menu
+    margin 15px auto
+    li
+      display inline-block
+      padding 5px 10px 5px 10px
+      border-left 1px solid black
+      height 15px
+      font-family "Montserrat"
+      font-size 20px
+      &:nth-child(2)
+        border none
+      &:first-child
+        border none
+      a
+        color #2f6fad
+        &:hover
+          text-decoration none
+          color #ad303f
+  .trash-menu-container
+    display flex
+  .trash-items
+    overflow hidden
+    margin 50px auto
+    width 60%
+    padding 1%
+    border 1px solid #adadad
+    border-radius 10px
+    background-color #f5f5f5
+    box-shadow 0px 5px 20px 2px #808080
+  .trash-input
+    width 70px
+    position relative
+    top -4px
+    height 20px
+    &:focus
+      outline none
+  .trash-line
+    color black
+    width 35%
+    margin 0 auto 0 auto
+  .data-title
+    width 30%
+    padding-top 15px
+    font-family "Montserrat"
+    font-weight bold
+    font-size 25px
+  .data-desc
+    width 50%
+    padding-top 15px
+    font-family "Open Sans"
+    font-size 20px
+  .trash-add-button
+    text-align right
+    font-size 35px !important
+    position relative
+    top 5px
 
-.trash-container .data-title{
-	width: 30%;
-	padding-top: 15px;
-	padding-bottom 15px;
-	padding-right 25px;
-	font-family: "Montserrat";
-    font-weight: bold;
-	font-size: 25px;
-
-}
-.trash-container .data-desc{
-	width: 50%;
-	padding-top: 15px;
-	padding-bottom 15px;
-	padding-right 25px;
-	font-family: "Open Sans";
-	font-size: 20px;
-}
-.trash-container .trash-add-button{
-	text-align: right;
-	font-size: 35px !important;
-	position: relative;
-	top: 5px;
-}
-
+.trash-data
+  div
+    display inline-block
+    float left
+    font-size 20px
 
