fix class names

--- a/frontend/components/trash/trash-pug.component.pug
+++ b/frontend/components/trash/trash-pug.component.pug
@@ -25,39 +25,39 @@
                 input.trash-input(type="text")
     .trash-items
         .trash-data
-            div.data-title
+            div.trash-data-title
                 span Message
-            div.data-desc
+            div.trash-data-desc
                 span message title
             div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
-            div.data-title
+            div.trash-data-title
                 span Event
-            div.data-desc
+            div.trash-data-desc
                 span event title
             div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
-            div.data-title
+            div.trash-data-title
                 span Check-in
-            div.data-desc
+            div.trash-data-desc
                 span check-in title
             div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
-            div.data-title
+            div.trash-data-title
                 span Task
-            div.data-desc
+            div.trash-data-desc
                 span task title
             div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
-            div.data-title
+            div.trash-data-title
                 span Draft
-            div.data-desc
+            div.trash-data-desc
                 span draft title
-            div.dtrash-add-button
+            div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
 
