--- a/frontend/components/trash/trashStyles.styl
+++ b/frontend/components/trash/trashStyles.styl
@@ -47,13 +47,13 @@
     color black
     width 35%
     margin 0 auto 0 auto
-  .data-title
+  .trash-data-title
     width 30%
     padding-top 15px
     font-family "Montserrat"
     font-weight bold
     font-size 25px
-  .data-desc
+  .trash-data-desc
     width 50%
     padding-top 15px
     font-family "Open Sans"
