--- a/frontend/components/trash/trash-pug.component.pug
+++ b/frontend/components/trash/trash-pug.component.pug
@@ -57,7 +57,7 @@
                 span Draft
             div.data-desc
                 span draft title
-            div.dtrash-add-button
+            div.trash-add-button
                 i(class="trash-add-button fa fa-plus-circle" aria-hidden="true")
 
 
