--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -88,9 +88,14 @@
       min-width 60%
       max-width 75%
       display flex
+      flex-direction column
+      font-family "Open Sans"
+      font-weight 400
+      font-size 23px
     a
       align-self center
       margin-left 2px
+      
 
 
 
