init commit Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -33,4 +33,9 @@
             option 12 September 2016
             option 13 September 2016
         .wrap
+          label
+            p Delete project:
+          .delete_button
+            button.delete Delete
+        .wrap
           button.col-xs-6(type='submit', form='projectEdit', value='Submit') Save
