--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -91,6 +91,18 @@
     a
       align-self center
       margin-left 2px
+    .delete_button
+      min-width 60%
+      max-width 75%
+      display flex
+      justify-content center
+      align-items center
+      .delete
+        background-color #FF5252
+        height 50%
+        line-height 50%
+        width 40%
+        font-size 24px
 
 
 
