fixed stylus issues

--- a/frontend/components/trash/trash-pug.component.pug
+++ b/frontend/components/trash/trash-pug.component.pug
@@ -22,7 +22,7 @@
                 a(href="/#/trash") draft
 
             li keyword =
-                input.trash-input(type="text")
+                input.trash-input(type="text" id="trash-input")
     .trash-items
         .trash-data
             div.trash-data-title
