--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -103,6 +103,38 @@
         line-height 50%
         width 40%
         font-size 24px
-
-
-
+    .confirming_modal
+      .background
+        position fixed
+        z-index 500
+        background-color #212121
+        opacity 0.5
+        height 100vh
+        width 100vw
+        top 0
+        left 0
+      .window
+        position fixed
+        z-index 501
+        top 35%
+        left 35%
+        background-color #f5f5f5
+        width 30%
+        padding 20px
+        border-radius 10px
+        label
+          font-size 24px
+          font-weight 600
+          width 100%
+          margin-bottom 20px
+        .confirm
+          display inline-block
+          margin 5px 10px
+          width 150px
+          background-color #FF5252
+        .cancel
+          display inline-block
+          margin 5px 10px
+          width 150px
+          background-color #212121
+      
