#69 - set up check-in

--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -5,7 +5,7 @@
                 h1
                     span Check-ins
             li
-                button(ng-click='setUpCheckin()') Set up check-in
+                button(ng-link='["CheckinsCreate"]') Set up check-in
     .accordion
         ul
             li
