Modifying project participators + and -

--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -59,6 +59,9 @@
         font-family "Montserrat"
         button()
       label
+        font-family "Montserrat"
+        font-size 25px
+        font-weight 400
         float left
         width 7em
         margin-right 0.5em
