fix messageBoard (bootstrap fail)

--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -1,5 +1,5 @@
-section.messageBoard
-  header
+section.messageBoard-wrapper
+  div.header
     h2 Message Board
     hr
     div(ng-link='["PostMessage"]') Post message
