--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -16,6 +16,9 @@
       font-family "Montserrat"
       font-size 18px
       font-weight 400
+      option:first-child
+        display none
+        opacity 0
     
   .goto
     text-align center
