readMore.directive fix

--- a/frontend/components/readMore/readMore.pug
+++ b/frontend/components/readMore/readMore.pug
@@ -2,4 +2,4 @@ p.readmore-block
     span
       | {{readmore.mainText}}
       span(ng-class="{'invisble':readmore.readmoreFlag}") {{readmore.additionalText}}
-    span(ng-class="{'invisble':!readmore.readmoreFlag}", ng-click='readmore.switchFlag()') ...
+    span(class="trigger", ng-class="{'invisble':!readmore.readmoreFlag}", ng-click='readmore.switchFlag()') ...
