--- a/frontend/components/readMore/readMore.styl
+++ b/frontend/components/readMore/readMore.styl
@@ -1,2 +1,14 @@
+.readmore-block
+    text-indent 20px
+    text-align justify
+    color #212121
+    font-weight 500
+    .trigger
+        cursor pointer
+        margin-left 1%
+        color #1D8DBF
+        font-weight 700
+
+
 .invisble
     display: none
