--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -10,13 +10,9 @@ section.messageBoard-wrapper
               h3 User Name
       article.message-info
           h3 Title
-          p.text
+          read-more
             | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            input#post-1.read-more-state(type='checkbox')
-            label.read-more-trigger(for='post-1') ...
-            span.read-more-target
-              |  Libero fuga facilis vel consectetur quos sapiente deleniti eveniet dolores tempore eos deserunt officia quis ab?
-              | Excepturi vero tempore minus beatae voluptatem!
+            | Libero fuga facilis vel consectetur quos sapiente deleniti eveniet dolores tempore eos deserunt officia quis ab?
           p.post-date 13:34 14.08.2016
       section.use-button
           div.fa.fa-files-o(ng-link='["File"]')
@@ -29,7 +25,7 @@ section.messageBoard-wrapper
                 h3 User Name
         article.message-info
             h3 Title
-            p.text
+            read-more
               | On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling.
             p.post-date 13:34 14.08.2016
         section.use-button
@@ -43,8 +39,16 @@ section.messageBoard-wrapper
                 h3 User Name
         article.message-info
             h3 Title
-            p.text
-              | On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling. On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling. On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling.
+            read-more
+              | On it differed repeated wandered required in. Then girl neat why yet knew rose spot.
+              | Moreover property we he kindness greatest be oh striking laughter.
+              | In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted.
+              | Contented attending smallness it oh ye unwilling. On it differed repeated wandered required in.
+              | Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter.
+              | In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted.
+              | Contented attending smallness it oh ye unwilling. On it differed repeated wandered required in. Then girl neat why yet knew rose spot.
+              | Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments.
+              | Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling.
             p.post-date 13:34 14.08.2016
         section.use-button
             div.fa.fa-files-o
