--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -6,6 +6,7 @@
         button(ng-click="proj.getProjects()",ng-if="proj.flag") 
           p Change project
         select(ng-if="!proj.flag",ng-model="proj.currentProjectId",ng-change="proj.setProject()")
+          option(value = "" disable) Not selected
           option(ng-repeat="project in proj.userProjects track by $index" value='{{project._id}}') {{project.title}}
       form(name='projectEdit',ng-if="proj.currentProjectId!=''").row.center-xs
         .wrap
