--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -1,4 +1,4 @@
-section.messageBoard
+.messageBoard-wrapper
     text-align center
     background-color #F5F5F5
     width 80%
@@ -7,14 +7,14 @@ section.messageBoard
     box-shadow 0 5px 20px 2px #808080
     border 1px solid #ADADAD
     border-radius 10px
-    header
-        text-align center
+    .header
         font-size 1.6em
         margin-bottom 50px
         h2
             color #212121
             font-size 1.8em
             font-family "Montserrat"
+            margin-bottom 0.83em
         hr
             margin-top -4%
             width 40%
@@ -22,6 +22,7 @@ section.messageBoard
             background-color #616161
             margin-bottom 2%
         div
+            box-sizing: content-box;
             -moz-user-select -moz-none
             -o-user-select none
             -khtml-user-select none
@@ -47,6 +48,7 @@ section.messageBoard
             margin-left 34.5%
             font-family "Montserrat"
             width 25%
+
     .message-block
         margin 0 5% 5% 5%
         padding-left 1%
@@ -99,35 +101,12 @@ section.messageBoard
                 margin-top 0
                 margin-bottom 4%
                 font-family "Montserrat"
-            .text
-                text-indent 20px
-                text-align justify
-                color #212121
-                font-weight 500
-                .read-more-target
-                    opacity 0
-                    max-height 0
-                    font-size 0
-                    transition .25s ease
-                .read-more-state
-                    display none
-                    &:checked
-                        & ~ .read-more-target
-                            opacity 1
-                            font-size inherit
-                            max-height 999em
-                        & ~ .read-more-trigger
-                            display none
-                .read-more-trigger
-                    cursor pointer
-                    margin-left 1%
-                    color #1D8DBF
-                    font-weight 700
             .post-date
                 color #F2992E
                 text-align right
                 font-weight bold
                 margin-bottom 0
+                word-spacing: 10px;
         .use-button
             border-top-right-radius 20px
             border-bottom-right-radius 20px
