--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -106,6 +106,7 @@
                 text-align right
                 font-weight bold
                 margin-bottom 0
+                margin-top 5%
                 word-spacing: 10px;
         .use-button
             border-top-right-radius 20px
