some style fix Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/header/header-pug.component.pug
+++ b/frontend/components/header/header-pug.component.pug
@@ -3,9 +3,9 @@ header.header-wrapper
 		ul.row.col-xs-8
 			li.col-xs-4
 				.black
-					select(ng-model="$ctrl.currentProjectId",ng-change="$ctrl.setProject()",id="green")
+					select(ng-model="head.currentProjectId",ng-change="head.setProject()",id="green")
 						option(value="" disable) Select Project
-						option(ng-repeat="project in $ctrl.userProjects track by $index" value='{{project._id}}') {{project.title}}	
+						option(ng-repeat="project in head.userProjects track by $index" value='{{project._id}}') {{project.title}}	
 			li.col-xs-4
 				input(type='text', placeholder='Search')
 			li.col-xs-4
